<resources>
    <string name="app_name">Assignments2</string>
    <string name="hello_message">Hello World!</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="switchTitle">What does this do?</string>
    <string name="loginHint">Login Name</string>
    <string name="RadioBttn">Radiobutton</string>
    <string name="CheckBttn">CheckButton</string>
    <string name="Content">Description</string>
    <string name="PasswordHint"> </string>
    <string name="LoginButton">Login</string>
    <string name="dialog_message">Would you Like to close this activity? </string>
    <string name="dialog_title">Closing Activity Notification</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="StartChat">Start Chat</string>
    <string name="ChatHint">Type text Here </string>
    <string name="SendBttn">Send</string>
</resources>
